--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,398 @@
 /* место для вашего кода */
+.header {
+    padding-left: 50px;
+    padding-right: 50px;
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items:center;
+}
+
+.header__menu {
+    display: flex;
+    justify-content:space-between;
+    margin-top: 133px;
+    margin-bottom: 138px;
+    margin-right: 36.52px;
+}
+
+.header__links-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 32px;
+}
+
+.header__links-list-item_no-bullit {
+    list-style: none;
+}
+
+.header__links-list-item{
+    list-style: circle;
+}
+
+/*
+.header__link_active {
+    
+}
+*/
+
+.header__link {
+    border-bottom: 1px solid #000;
+    text-decoration: none;
+}
+
+.header__link-text {
+    font-size: 18px;
+    line-height: 1.1667;
+}
+
+.header__logo {
+    display: flex;
+    width: 148px;
+    height: 105px;
+    margin-top: 92px;
+    margin-bottom: 96px;
+}
+
+/*
+.header__logo-image {
+    width: 129.11px;
+    height: 104.65px;
+    margin: 1.16px 9.86px 0.81px 9.03px;
+}
+*/
+
+.address {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 1.35;
+}
+
+.header__address {
+    max-width: 240px;
+    justify-self: end;
+    margin-top: 95px;
+    margin-bottom: 100px;
+}
+
+.header__adress-location {
+    width: 236.9px;
+    padding-right: 3.1px;
+}
+
+/*--cover--*/
+
+
+.cover {
+    position: relative;
+    min-height: 50px;
+    padding: 165px 50px 50px 50px;
+    background-image: url(../images/cover.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
+    z-index: 0;
+}
+
+.overlay{
+    background-color: black;
+    opacity: 60%;
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.cover_title {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    font-size: 100px;
+    font-weight: bold;
+    line-height: 1.15;
+    text-transform: uppercase;
+    color: #fff;
+    margin-bottom: 106px;
+}
+
+.accent-span {
+    display: block;
+    font-weight: bold;
+}
+
+.text-center {
+    text-align: center;
+    margin-right: -30px;
+}
+
+.text-right {
+    text-align: right;
+    
+}
+
+.no-letter-spacing {
+    letter-spacing: 0px;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 0.3em;
+}
+
+.cover__description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap:107px;
+}
+
+.cover__description-text {
+    color: #fff;
+    font-size: 22px;
+    text-transform: uppercase;
+    word-spacing: 18px;
+    line-height: 1.27;
+} 
+
+.bet-button {
+    width: 256px;
+    height:51px;
+    border: 1px solid #fff;
+    color: #fff;
+    font-weight: normal;
+    font-size: 22px;
+    text-transform: uppercase;
+    background-color: transparent;
+    font-weight: 500;
+    text-align: center;
+}
+
+/*--lots--*/
+
+.lots {
+    margin: 180px 24px 0px 24px;
+    padding: 0px;
+    min-height: 50px;
+}
+
+.lots__heading {
+    margin-left: 40px;
+    margin-bottom: 27px;
+    font-size: 40px;
+    font-weight: bold;
+    /*line-height: 1;*/
+    text-transform: uppercase;
+}
+
+.lots__card-list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 25px;
+    margin-bottom: 30px;
+}
+
+.lots__card-list-item {
+    list-style: none;
+}
+
+/*
+.card-link {
+
+}
+*/
+
+.card {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 596px;
+    width: 334px;
+    position: relative;
+    background-repeat:no-repeat;
+    background-size: cover;
+    background-position: center;
+    z-index: 0;
+}
+
+.card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture{
+    background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+    color: #fff;
+    font-size: 22px;
+    font-weight:bold;
+    line-height: 1.2;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-align: left;
+    margin: 48px 40px 0px 40px;
+    
+}
+
+.card__text {
+    color: #fff;
+    font-size: 20px;
+    font-weight: normal;
+    line-height: 1.2;
+    text-align: left;
+    margin: 0px 40px 48px 40px;
+}
+
+.lots__look-more-link {
+    font-size: 20px;
+    line-height: 1;
+    border-bottom: 1px solid #000;
+    text-decoration: none;
+    margin-left: 40px;
+    
+}
+
+/*--about--*/
+
+
+.about {
+    display:grid;
+    grid-template-columns: 359px auto;
+    margin: 120px 24px 180px;
+    padding: 0px;
+    min-height: 50px;
+}
+
+.about__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #000;
+    border-radius: 120px;
+    width: 240px;
+    height: 240px;
+    margin-top: 35px; 
+    margin-right: 72px;
+    margin-left: 47px;
+}
+
+.about__logo-image {
+    width: 148px;
+}
+
+.about__column {
+    margin-top: 136px;
+}
+
+.about__title {
+    font-size: 40px;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1;
+    margin-top: 5px;
+    margin-bottom: 100px;
+}
+
+.about__description-block {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.about__text {
+    font-size: 20px;
+    font-weight: normal;
+    line-height: 1.2;
+    text-align:left;
+}
+
+.about__text-narrower-paragpaph {
+    padding-right: 5px;
+}
+
+/*--footer--*/
+
+
+.footer {
+    height: 180px;
+    display: grid;
+    grid-template-columns: 1fr 163.9px 1fr;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.footer__adress-location {
+    width: 260px;
+}
+
+/*
+.footer__menu {
+
+}
+*/
+
+.footer__menu-list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    margin-top: 4px;
+}
+
+.footer__menu-list-item {
+    display: flex;
+    justify-content: center;
+}
+
+/*
+.footer__menu-link_active {
+    text-decoration: none;
+}
+*/
+
+.footer__menu-link {
+    border-bottom: 1px solid #000;
+    text-decoration: none;
+}
+
+.footer__menu-link-text {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 1.167;
+    text-align: center;
+
+
+}
+
+.footer__social-list {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 48px;
+    justify-self: end;
+    margin-top: 2px;
+}
+
+/*
+.footer__social-list-item {
+
+}
+*/
+
+/*
+.footer__social-link {
+
+}
+*/
+
+.footer__social-icon {
+    width: 48px;
+}
